# pandi-marketplace

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
plugins/pandi-launchpad/: README.md  package-lock.json  package.json  pyproject.toml
plugins/pandi-launchpad-ts/: README.md  package-lock.json  package.json  tsconfig.json
plugins/pandi-launchpad-ts/.claude-plugin/: plugin.json
plugins/pandi-launchpad-ts/skills/pandi-launchpad-ts/: SKILL.md
plugins/pandi-launchpad-ts/src/: ask.ts  cli.ts  device.ts  protocol.ts
plugins/pandi-launchpad-ts/tests/: ask.test.ts  font.test.ts  hooks.test.ts  protocol.test.ts
plugins/pandi-launchpad/.claude-plugin/: plugin.json
plugins/pandi-launchpad/hooks/: hooks.json  notify.py
plugins/pandi-launchpad/skills/pandi-launchpad/: SKILL.md
plugins/pandi-launchpad/src/: ask.ts  cli.ts  device.ts  font.ts  hooks.ts  icons.ts  menu.ts  protocol.ts  risky-command.ts
plugins/pandi-launchpad/src/pandi_launchpad/: device.py  hooks.py  server.py
plugins/pandi-launchpad/tests/: ask.test.ts  font.test.ts  icons.test.ts  menu.test.ts  protocol.test.ts  risky-command.test.ts  test_device.py  test_hooks.py
