[project]
name = "pandi-launchpad"
version = "0.2.0"
description = "MCP server that turns a Novation Launchpad X into a two-way notification/prompt channel for Claude Code."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "mido>=1.3",
    "python-rtmidi>=1.5",
]

[project.scripts]
pandi-launchpad = "pandi_launchpad.server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pandi_launchpad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
